@@ -1,3 +1,8 @@
+2013-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/qt4/debug_message_window.cpp:
+	- ログレベルが未選択の場合はメッセージが全て消去されるように修正
+
 2013-05-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/debug_painter.cpp:
